- Replaced "quad" wall construction with "room" which also queues up roofing
- Added happiness bonuses for working or sleeping in an enclosed room (surrounded by walls or doors and covered with roof)
- Flooring now has a speed modifier, constructed flooring is faster, most natural flooring is slower, some moreso (gravel)

Alpha 5.2.1 - 30th April 2021

- Fixed cleanup of cancelled and completed liquid production assignments, which was causing liquid production to break down over time

Alpha 5.2 - 20th April 2021

- Progress bars to show completion of jobs being worked on
- Made job completion time moddable, broken down by job type, or crafting recipe or cooking recipe where applicable

Alpha 5.1 - 18th April 2021

- Borderless windowed or fullscreen support!
- Added a particle effect system for visual effects in the world. Effects added include:
    - Rock chipping away when mining
    - Dust cloud when wall is mined away
    - Wood chipping away when cutting down trees
    - Wood chips and leaves when falling tree hits the ground
    - Muddy splats when digging in the ground
    - Leaves being thrown when harvesting crops or removing pests
    - Deciduous trees will have leaves fall away in autumn!
    - Liquids will splash when dumped into containers
    - Wood shavings when working with a sawmill or carpentry
    - Stone chippings from stonemasonry
    - Sparks from blacksmith's forge (look out for fires later!)
    - Dust cloud on furniture construction/destruction
    - And more that I can't remember!
- Option to empty items containing liquid onto the ground
- Immigration settings are now open to modding
- Added the initial stockpile back underneath the starting items
- Fixed a bug for when an invalid language code was kept in preferences
- Fixed a bug where crafting may mix up multiple input items of the same type e.g. crushing ore with different ore types at once

Alpha 5.0.1

- Added a display of current number of beds to settler management screen