@@ -5,6 +5,8 @@ Alpha 5.3
 - Replaced "quad" wall construction with "room" which also queues up roofing
 - Added happiness bonuses for working or sleeping in an enclosed room (surrounded by walls or doors and covered with roof)
 - Flooring now has a speed modifier, constructed flooring is faster, most natural flooring is slower, some moreso (gravel)
+- Added a new "zoom to cursor" option which moves the camera according to where the cursor is when zooming in or out, can be disabled in game options
+- Pressing escape will now cancel the current view unless you are at the top level, at which point it will go to the main menu as before
 
 Alpha 5.2.1 - 30th April 2021
 
